--- a/CNLCI/Views/Justificantes/_Motivo.cshtml
+++ b/CNLCI/Views/Justificantes/_Motivo.cshtml
@@ -1,7 +1,4 @@
-﻿<div class="container">
-    <div class="Marco">
-        <div class="columns">
-            <div class="column is-2-4">
+﻿  <div class="column is-2-4">
                 <div class="field">
                     <div class="control">
                         <div class="select" style=" width: 100%">
@@ -20,23 +17,5 @@
                 </div>
             </div>
             
-                <div class="column is-2-4">
-                    <div class="field">
-                        <div class="control">
-                            <div class="select" style=" width: 100%">
-                                <select name="Medio" id="Medio">
-
-                                    <option value="" style="display: none;">Seleccionar medio de autorización</option>
-                                    <option value="TELEFONICA">Llamada telefónica</option>
-                                    <option value="ESCRITA">Nota, recado, SMS</option>
-                                    <option value="PRESENCIAL">Presencial</option>
-                                </select>
-                            </div>
-                        </div>
-                    </div>
                 
-
-            </div>
-        </div>
-    </div>
-</div>
+      
