--- a/CNLCI/Views/Shared/_Layout.cshtml
+++ b/CNLCI/Views/Shared/_Layout.cshtml
@@ -19,6 +19,12 @@
     @Scripts.Render("~/bundles/modernizr")
 
     <style>
+        #miTabla thead tr {
+            position: sticky;
+            top: 0;
+            background-color: #f2f2f2;
+           
+        }
         .lol {
             color: white;
             font-family: 'Century Gothic';
@@ -27,6 +33,12 @@
 
         .este {
             height: 20em;
+            overflow-x: hidden;
+            overflow-y: scroll;
+            width: 100%;
+        }
+        .este2 {
+            height: 25em;
             overflow-x: hidden;
             overflow-y: scroll;
             width: 100%;
