--- a/CNLCI/Views/Justificantes/Justificante.cshtml
+++ b/CNLCI/Views/Justificantes/Justificante.cshtml
@@ -5,7 +5,7 @@
 
 <main>
 
-   
+
 
     <div class="container Marco">
         <div style="margin-bottom: 20px;">
@@ -35,7 +35,7 @@
             </div>
         }
 
-        @using (Html.BeginForm("GenerarJ", "Justificantes", FormMethod.Post, new { onsubmit = "return validarDatos();", @class="este", enctype = "multipart/form-data" }))
+        @using (Html.BeginForm("GenerarJ", "Justificantes", FormMethod.Post, new { onsubmit = "return validarDatos();", @class = "este", enctype = "multipart/form-data", target = "_blank" }))
         {
             @Html.Partial("_Alumno")
 
@@ -44,10 +44,11 @@
             <button type="reset" class="button is-danger">Limpiar</button>
         </p>
         <p class="control">
-            <button type="submit" class="button is-primary">Generar</button>
+            <button type="submit" class="button is-primary" formtarget="_blank">Generar</button>
         </p>
+        
     </div>
-            
+
 
         }
 
@@ -55,7 +56,20 @@
 
     </div>
 
-
+    <div class="modal" id="PDF" style="width: 50%; margin: auto; text-align: center;">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <div class="ExternalFiles">
+                        <iframe src="~/ArchivosPDF/@ViewBag.Ruta" width="500" height="300"></iframe>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-danger" data-dismiss="modal">Cerrar</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </main>
 
 
@@ -92,12 +106,19 @@
 
         var alerta = "Debes especificar: \n";
         var numa = 0;
+        var nombre = document.getElementById("IDNOMBRE").value;
+        if (nombre === "Nombre(s)") {
+            alert("Es necesario especificar un alumno válido.\n \nPara ello, ingrese una matrícula en la barra de búsqueda superior y presione el botón Buscar");
+            return false;
+        }
+
         var carrera = document.getElementById("IDCARRERA").value;
         var grupo = document.getElementById("IDGRUPO").value;
         var motivo = document.getElementById("Motivo").value;
         var fecha1 = document.getElementById("fecha").value;
         var fecha2 = document.getElementById("fechaDelDia").value;
         var fecha3 = document.getElementById("fechaAlDia").value;
+
         
         if (carrera === "") {
             alerta += "-Carrera\n";
