--- a/CNLCI/Views/Justificantes/PaseDeSalida.cshtml
+++ b/CNLCI/Views/Justificantes/PaseDeSalida.cshtml
@@ -11,7 +11,7 @@
                 <h1 class="title">Nuevo pase de salida</h1>
             </center>
         </div>
-        @using (Html.BeginForm("BuscarP", "Justificantes", FormMethod.Post))
+        @using (Html.BeginForm("BuscarP", "Justificantes", FormMethod.Post, new { onsubmit = "return validarMatricula();" }))
         {
             <div class="field is-horizontal">
                 <div class="field-label is-normal">
@@ -31,7 +31,9 @@
                 </div>
             </div>
         }
-        @using (Html.BeginForm("GenerarP", "Justificantes", FormMethod.Post, new { onsubmit = "return validarDatos();", @class = "este", enctype = "multipart/form-data" }))
+
+        @using (Html.BeginForm("GenerarP", "Justificantes", FormMethod.Post, new { onsubmit = "return validarDatos();", onsubmitComplete = "", @class = "este", enctype = "multipart/form-data", target = "_blank"}))
+
         {@Html.Partial("_AlumnoTutor")
 
 
@@ -42,18 +44,34 @@
             <p class="control">
                 <button type="submit" class="button is-primary">Generar</button>
             </p>
+           
         </div>
     }
 
 
 
-    </div>
 
 
 
-    
+        <div class="modal" id="PDF" style="width: 50%; margin: auto; text-align: center;">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-body">
+                        <div class="ExternalFiles">
+                            <iframe src="~/ArchivosPDF/@ViewBag.Ruta" width="500" height="300"></iframe>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-danger" data-dismiss="modal">Cerrar</button>
+                    </div>
+                </div>
+            </div>
+        </div>
 
 
+
+
+</div>
 </main>
 
 <script>
@@ -89,6 +107,11 @@
 
         var alerta = "Debes especificar: \n";
         var numa = 0;
+        var nombre = document.getElementById("IDNOMBRE").value;
+        if (nombre === "Nombre(s)") {
+            alert("Es necesario especificar un alumno válido.\n \nPara ello, ingrese una matrícula en la barra de búsqueda superior y presione el botón Buscar");
+            return false;
+        }
         var carrera = document.getElementById("IDCARRERA").value;
         var grupo = document.getElementById("IDGRUPO").value;
         var motivo = document.getElementById("Motivo").value;
@@ -109,18 +132,18 @@
             alerta += "-Motivo\n";
             numa += 1;
         }
-        if (medio.trim()==="") {
+        if (medio.trim() === "") {
             alerta += "-Medio de autorización\n";
             numa += 1;
-           
+
         }
-        if (Rau.trim() === "" && Nau.trim() ==="") {
+        if (Rau.trim() === "" && Nau.trim() === "") {
             alerta += "-Quién autoriza\n";
             numa += 1;
             if (Paut.trim() === "") {
                 alerta += "-Parentezco con el alumno de quién autoriza\n";
                 numa += 1;
-}
+            }
         }
 
         if (numa > 0) {
@@ -131,5 +154,11 @@
         return true;
     }
 
+    
 
 </script>
+
+
+
+
+
