--- a/CNLCI/Views/Historial/Justificante.cshtml
+++ b/CNLCI/Views/Historial/Justificante.cshtml
@@ -69,8 +69,8 @@
 
                         <td>
                             <center>
-                                @Html.ActionLink("Details", "Details", new { id = item.No__justificante, @class = "button" }) |
-                                @Html.ActionLink("Delete", "Delete", new { id = item.No__justificante })
+                                <a class="button is-rounded button-link " style="height: auto; max-width: 100%; " href="@Url.Action("ImprimirJ", "Historial")">Imprimir</a>
+                              
                             </center>
                         </td>
                     </tr>
