--- a/CNLCI/Views/Reportes/PorAlumno.cshtml
+++ b/CNLCI/Views/Reportes/PorAlumno.cshtml
@@ -22,24 +22,24 @@
                         <div class="field">
                             <label class="label">Matrícula</label>
                             <div class="control">
-                                <input class="input" type="text" placeholder="Ingrese una matrícula" name="M" maxlength="11">
+                                <input class="input" type="text" placeholder="Ingrese una matrícula" name="M" maxlength="11" id="M">
                             </div>
                         </div>
                         <div class="field">
                             <label class="label">Fecha Inicial</label>
                             <div class="control">
-                                <input class="input" type="date" name="FI">
+                                <input class="input" type="date" name="FI" id="FI">
                             </div>
                         </div>
                         <div class="field">
                             <label class="label">Fecha Final</label>
                             <div class="control">
-                                <input class="input" type="date" name="FF">
+                                <input class="input" type="date" name="FF" id="FF">
                             </div>
                         </div>
                         <div class="field">
                             <div class="control">
-                                <button type="button" class="button is-primary" onclick="TraerDatos()">Buscar</button>
+                                <button type="button" class="button is-primary" onclick="Validar()">Buscar</button>
                             </div>
                         </div>
                     }
@@ -60,7 +60,29 @@
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
 <script>
 
-   // Función para traer datos del servidor y dibujar el gráfico
+    function Validar() {
+        var numa = 0;
+        var matricula = document.getElementById("M").value;
+        var FI = document.getElementById("FI").value;
+        var FF = document.getElementById("FF").value;
+        var alerta = "Debes especificar: \n";
+
+
+        if (matricula == "") {
+            alerta += "-Matricula\n";
+            numa += 1;
+}
+        if (isNaN(Date.parse(FI)) || isNaN(Date.parse(FF))) {
+            alerta += "-Rango de fecha adecuado\n";
+            numa += 1;
+        }
+        if (numa > 0) {
+            alert(alerta);
+
+        } else { TraerDatos(); }
+        
+
+    }
     function TraerDatos() {
     var matricula = document.getElementsByName("M")[0].value;
     var fechaInicial = document.getElementsByName("FI")[0].value;
@@ -81,9 +103,10 @@
         })
             .then(response => response.json())
             .then(data => {
-
-       DibujarGrafico(data);
-           console.log(data);
+                var chartElement = document.getElementById('chart');
+                chartElement.innerHTML = '';
+          RAJ(data);
+          
               })
             .catch(error => {
             console.error("Error:", error);
@@ -91,116 +114,88 @@
 }
 
 
-function DibujarGrafico(data) {
-
-    var dataPorAño = {};
-    data.forEach(item => {
-        if (!dataPorAño[item.Año]) {
-            dataPorAño[item.Año] = [];
-        }
-        dataPorAño[item.Año].push({ x: item.Mes, y: item.Valor });
-    });
-
-    // Convertir datos a formato esperado por ApexCharts
-    var series = Object.keys(dataPorAño).map(año => ({
-        name: año,
-        data: dataPorAño[año]
-    }));
-
-    // Configuración de la gráfica
-    var options = {
-        series: [{
-            name: "Session Duration",
-            data: [45, 52, 38, 24, 33, 26, 21, 20, 6, 8, 15, 10]
-        },
-        {
-            name: "Page Views",
-            data: [35, 41, 62, 42, 13, 18, 29, 37, 36, 51, 32, 35]
-        },
-        {
-            name: 'Total Visits',
-            data: [87, 57, 74, 99, 75, 38, 62, 47, 82, 56, 45, 47]
-        }
-        ],
-        chart: {
-            height: 350,
-            type: 'line',
-            zoom: {
+    function RAJ(json) {
+        var data = json;
+        var options = {
+            series: [],
+            chart: {
+                type: 'bar',
+                height: 350
+            },
+            plotOptions: {
+                bar: {
+                    horizontal: false,
+                    columnWidth: '55%',
+                    endingShape: 'rounded'
+                }
+            },
+            dataLabels: {
                 enabled: false
             },
-        },
-        dataLabels: {
-            enabled: false
-        },
-        stroke: {
-            width: [5, 7, 5],
-            curve: 'straight',
-            dashArray: [0, 8, 5]
-        },
-        title: {
-            text: 'Page Statistics',
-            align: 'left'
-        },
-        legend: {
-            tooltipHoverFormatter: function (val, opts) {
-                return val + ' - ' + opts.w.globals.series[opts.seriesIndex][opts.dataPointIndex] + ''
-            }
-        },
-        markers: {
-            size: 0,
-            hover: {
-                sizeOffset: 6
-            }
-        },
-        xaxis: {
-            categories: ['01 Jan', '02 Jan', '03 Jan', '04 Jan', '05 Jan', '06 Jan', '07 Jan', '08 Jan', '09 Jan',
-                '10 Jan', '11 Jan', '12 Jan'
-            ],
-        },
-        tooltip: {
-            y: [
-                {
-                    title: {
-                        formatter: function (val) {
-                            return val + " (mins)"
-                        }
-                    }
-                },
-                {
-                    title: {
-                        formatter: function (val) {
-                            return val + " per session"
-                        }
-                    }
-                },
-                {
-                    title: {
-                        formatter: function (val) {
-                            return val;
-                        }
-                    }
+            stroke: {
+                show: true,
+                width: 2,
+                colors: ['transparent']
+            },
+            xaxis: {
+                categories: []
+            },
+            yaxis: {
+                title: {
+                    text: 'Total de justificantes'
                 }
-            ]
-        },
-        grid: {
-            borderColor: '#f1f1f1',
-        }
-    };
+            },
+            fill: {
+                opacity: 1
+            },
+            title: {
+                text: [],
+                align: 'center',
+                margin: 10,
+                offsetX: 0,
+                offsetY: 0,
+                floating: false,
+                style: {
+                    fontSize: '16px',
+                    fontWeight: 'bold',
+                    fontFamily: undefined,
+                    color: '#263238'
+                },
+            }
+        };
+        var categoriasUnicas = new Set();
+        var titulo = new Set();
+        data.forEach(function (dato) {
+            if (!categoriasUnicas.has(dato.Año)) {
+                options.xaxis.categories.push(dato.Año);
+                categoriasUnicas.add(dato.Año);
+            }
+            var existingSerie = options.series.find(function (serie) {
+                return serie.name === dato.MesNombre;
+            });
 
-    var chart = new ApexCharts(document.querySelector("#chart"), options);
-    chart.render();
-      
+            if (!existingSerie) {
+                existingSerie = {
+                    name: dato.MesNombre,
+                    data: []
+                };
+                options.series.push(existingSerie);
+            }
+            var serieData = Array.from({ length: options.xaxis.categories.length }, (_, index) => {
+                return existingSerie.data[index] || 0;
+            });
+            serieData[categoriasUnicas.size - 1] = dato.Total;
+            existingSerie.data = serieData;
 
-    // Crear la gráfica
-   // var chart = new ApexCharts(document.querySelector("#chart"), {
-     //   series: series,
-       // options: options
-//    });
+            if (!titulo.has(dato.Nombre)) {
+                options.title.text.push(dato.Nombre);
+                titulo.add(dato.Nombre);
+            }
+            
+        });
 
-    // Renderizar la gráfica
-   // chart.render();
-}
-
-
-
+        console.log(options);
+        var chart = new ApexCharts(document.querySelector("#chart"), options);
+        chart.render();
+    }
 </script>
