--- a/CNLCI/Views/Shared/_LoginPartial.cshtml
+++ b/CNLCI/Views/Shared/_LoginPartial.cshtml
@@ -27,7 +27,7 @@
                             <a class="dropdown-item" href="@Url.Action("PorAlumno", "Reportes")"><ion-icon name="person-circle-outline"></ion-icon>  Reporte por alumno</a>
                             <a class="dropdown-item" href="@Url.Action("PorGrupo", "Reportes")"><ion-icon name="people-circle-outline"></ion-icon>  Reporte por grupo</a>
                             <a class="dropdown-item" href="@Url.Action("PorCarrera", "Reportes")"><ion-icon name="book-outline"></ion-icon>  Reporte por carrera</a>
-                            <a class="dropdown-item" href="@Url.Action("PorSemestre", "Reportes")"><ion-icon name="calendar-outline"></ion-icon>  Reporte por semestre</a>
+                            <a class="dropdown-item" href="@Url.Action("PorMotivo", "Reportes")"><ion-icon name="calendar-outline"></ion-icon>  Reporte por motivo</a>
                         </div>
                     </div>
                 </div>
@@ -57,7 +57,8 @@
                             Configuraciones
                         </a>
                         <div class="dropdown-menu " aria-labelledby="configuraciones">
-                            <a class="dropdown-item" href="@Url.Action("Importar", "Configuracion")"><ion-icon name="people-outline"></ion-icon>  Alumnos</a>
+                            <!-- <a class="dropdown-item" href="Url.Action("Importar", "Configuracion")"><ion-icon name="people-outline"></ion-icon>  Alumnos</a>-->
+
                             <a class="dropdown-item" href="@Url.Action("Importar", "Configuracion")"><ion-icon name="server-outline"></ion-icon>  Base de datos</a>
 
                         </div>
